--- a/pages/css/popup.css
+++ b/pages/css/popup.css
@@ -28,24 +28,38 @@ html body {
 	right: 5px;
 }
 
+#get-article{
+	color: white;
+	cursor: pointer;
+}
+
+#get-article p {
+	margin: 0;
+}
+
 #rss{
-	width: 100%;
+	width: calc(100% - 10px);
 	background-color: #E3594B;
 	font-style: italic;
 	font-size: 1em;
+	padding: 5px;
 	margin-bottom: .5em;
-
+	margin-top: .5em;
+	display: none;
 }
 
 #rss div{
 	margin: 5px;
 	background-color: #E3594B;
 	color: white;
+	border: 1px solid white;
+	padding: 5px;
 }
 
 #rss div:hover{
 	background-color: white;
 	color: #E3594B;
+	cursor: pointer;
 }
 
 #chart{
@@ -54,18 +68,18 @@ html body {
 	padding: 10px;
 }
 
-path.slice {
-	stroke-width:2px;
-}
-
-polyline {
-	opacity: .3;
-	stroke: black;
-	stroke-width: 2px;
-	fill: none;
-}
-
 svg path {
 	stroke: white;
 	stroke-width: 1.5;
+	cursor: pointer;
+}
+
+.solidArc{
+	position: relative;
+	z-index: 10;
+}
+
+.outlineArc {
+	position: relative;
+	z-index: 1;
 }
