--- a/pages/css/popup.css
+++ b/pages/css/popup.css
@@ -29,7 +29,8 @@ html body {
 	background-repeat: no-repeat;
 	background-position: center;
 	background-size: contain;
-	margin-bottom: 20px;
+	position: relative;
+	top: -10px;
 	margin-top: 10px;
 }
 
@@ -39,6 +40,8 @@ html body {
 	font-size: .8em;
 	text-align: center;
 	padding: 0 25px 0 25px;
+	position: relative;
+	top: -10px;
 }
 
 #onboard-text p{
@@ -48,12 +51,15 @@ html body {
 #slide-up{
 	background-color: #E3594B;
 	color: white;
+	width: 100px;
+	font-size: .8em;
 	padding: 5px;
 	display: inline-block;
+	text-align: center;
 	cursor: pointer;
 	position: absolute;
-	bottom: 60px;
-	right: 15px;
+	bottom: 15px;
+	right: calc(50% - 50px);
 }
 
 #get-article{
@@ -128,7 +134,7 @@ html body {
 
 svg path {
 	stroke: #0C152E;
-	stroke-width: 1.5;
+	stroke-width: 2;
 	cursor: pointer;
 }
 
