--- a/pages/css/popup.css
+++ b/pages/css/popup.css
@@ -23,6 +23,16 @@ html body {
 	left: 15px;
 }
 
+#go-profile {
+	margin-left: 0;
+	width: 40px;
+	height: 40px;
+	position: absolute;
+	top: 15px;
+	right: 15px;
+	cursor: pointer;
+}
+
 #onboarding{
 	width: 100%;
 	height: 200px;
@@ -138,6 +148,10 @@ svg path {
 	cursor: pointer;
 }
 
+svg path:hover{
+	fill: #E3594B;
+}
+
 svg text {
 	pointer-events: none;
 }
@@ -150,4 +164,16 @@ svg text {
 .outlineArc {
 	position: relative;
 	z-index: 1;
+}
+
+/*-----------------------------------*/
+/*			USER PROFILE 			 */
+/*-----------------------------------*/
+
+#profile{
+	display: none;	
+	width: 320;
+	height: 320;
+	padding: 10px;
+	margin-top: 50px;
 }
