--- a/pages/css/popup.css
+++ b/pages/css/popup.css
@@ -108,7 +108,13 @@ html body {
 	right: 0px;
 	width: 20px;
 	height: 20px;
+	background-image: url("../img/close.png");
+	background-size: cover;
 	cursor: pointer;
+}
+
+#close-rss:hover{
+	background-image: url("../img/close_hover.png");
 }
 
 .rss-wrapper {
