--- a/pages/css/popup.css
+++ b/pages/css/popup.css
@@ -206,26 +206,48 @@ svg text {
 }
 
 #per-day-chart {
-	/*width: 100%;*/
-	height: 100px;
+	width: 300px;
+	height: 250px;
 	position: absolute;
-	bottom: 30px;
+	bottom: 10px;
+	margin: 10px;
 }
 
-.per-day-line{
-	fill: none;
-	stroke: #fff;
-	stroke-width: 2;
+#profile h2 {
+	position: fixed;
+	font-family: Roboto;
+	font-weight: 700;
+	letter-spacing: 2px;
+	/*text-transform: uppercase;*/
+	font-size: 12pt;
+	top: 30px;
+	left: 20px;
 }
 
-.bar{
-	/*shape-rendering: crispEdges;*/
-	fill: #00C189;
-	/*stroke-width: 2;*/
+#filter-container {
+	list-style: none;
+	position: fixed;
+	width: 320px;
+	top: 70px;
+	/*left: -20px;*/
+	font-family: Roboto;
+	font-weight: 300;
+	letter-spacing: 2px;
+	font-size: 8pt;
+	text-align: center;
+	margin: 0;
+	padding: 0;
 }
+
+.filter {
+	display: inline;
+	margin-right: 3px;
+	line-height: 15px;
+}
+
 
 .axis {
-	stroke: #fff;
+	stroke: #274573;
 	stroke-width: 1;
 }
 
