--- a/pages/css/popup.css
+++ b/pages/css/popup.css
@@ -147,6 +147,7 @@ html body {
 	position: relative;
 	float: right;
 	font-family: "Roboto Slab";
+	/*font-style: italic;*/
 } 
 
 
@@ -207,7 +208,7 @@ svg text {
 
 #per-day-chart {
 	width: 300px;
-	height: 250px;
+	height: 210px;
 	position: absolute;
 	bottom: 10px;
 	margin: 10px;
@@ -220,29 +221,34 @@ svg text {
 	letter-spacing: 2px;
 	/*text-transform: uppercase;*/
 	font-size: 12pt;
-	top: 30px;
+	top: 13px;
 	left: 20px;
 }
 
 #filter-container {
 	list-style: none;
 	position: fixed;
-	width: 320px;
-	top: 70px;
-	/*left: -20px;*/
+	width: 250px;
+	top: 57px;
+	left: 20px;
 	font-family: Roboto;
 	font-weight: 300;
 	letter-spacing: 2px;
 	font-size: 8pt;
-	text-align: center;
+	/*text-align: center;*/
 	margin: 0;
 	padding: 0;
 }
 
-.filter {
+.button {
 	display: inline;
 	margin-right: 3px;
 	line-height: 15px;
+	cursor: pointer;
+}
+
+.filter:hover{
+	color: #E3594B;
 }
 
 
