--- a/pages/css/popup.css
+++ b/pages/css/popup.css
@@ -231,28 +231,13 @@ svg path {
 	stroke-width: 2;
 	cursor: pointer;
 }
-
+e
 /*svg path:hover{
 	fill: #00D99A;
 }*/
 
-svg text {
-	pointer-events: none;
-	font-family: Roboto;
-	font-weight: 300;
-	letter-spacing: 2px;
-	text-transform: uppercase;
-	font-size: 8pt;
-}
-
-.solidArc{
-	position: relative;
-	z-index: 10;
-}
-
-.outlineArc {
-	position: relative;
-	z-index: 1;
+.slice path:hover {
+	fill: #00EDA8;
 }
 
 /*-----------------------------------*/
@@ -267,7 +252,7 @@ svg text {
 
 #per-day-chart {
 	width: 320px;
-	height: 230px;
+	height: 220px;
 	position: absolute;
 	bottom: 10px;
 	/*margin: 10px;*/
@@ -317,6 +302,10 @@ svg text {
 	color: #3754A1;
 }
 
+.selected {
+	color: #E3594B;
+}
+
 .button {
 	display: inline;
 	margin-right: 3px;
@@ -324,7 +313,7 @@ svg text {
 	/*cursor: pointer;*/
 }
 
-#articles-read-container{
+/*#articles-read-container{
 	width: calc(100% - 10px);
 	height: 220px;
 	overflow: scroll;
@@ -359,20 +348,39 @@ svg text {
 .article-read:hover{
 	background-color: white;
 	color: #E3594B;
-}
+}*/
 
+/*
 .axis {
 	stroke: #274573;
 	stroke-width: 1;
+}*/
+
+.tick line {
+	stroke: #274573;
+	stroke-width: 1;
+	stroke-dasharray: 2,2;	
+}
+.tick text {
+	fill: white;
+	font-size: 8px;
 }
 
 /*-----------------------------------*/
 /*			HELP	     			 */
 /*-----------------------------------*/
 
-
 #help{
 
+}
+
+#help h1 {
+	font-size: 16pt;
+	margin: 0;
+	display: inline-block;
+	position: absolute;
+	top: -39px;
+	left: 30px;
 }
 
 .section {
@@ -385,6 +393,58 @@ svg text {
 	top: 60px;
 	left: 0;
 }
+
+#help ul {
+	width: 100%;
+	height: 100%;
+	margin: 0;
+	padding: 0;
+	list-style: none;
+}
+
+#help ul li{
+	margin: 0;
+	padding-left: 10px
+}
+
+#help ul li p {
+	display: inline;
+	float: left;
+	margin-top: 7px;
+	margin-bottom: 0;
+}
+
+.faq-letter {
+	clear: left;
+	margin-right: 7px;
+	font-weight: 700;
+	font-size: 10pt;
+}
+
+.faq-text{
+	width: 90%;
+	font-size: 9pt;
+}
+
+.q {
+	color: #00C189;
+}
+
+.a {
+	color: #E3594B;
+	/*clear: left;*/
+}
+
+#help ul li p a {
+	color: white;
+	/*text-decoration: none;*/
+}
+
+#help ul li p a:hover {
+	color: white;
+	font-style: italic
+}
+
 
 /*-----------------------------------*/
 /*			FEEDBACK     			 */
